--- a/cameraVApp/src/main/res/values-pt-rPT/strings.xml
+++ b/cameraVApp/src/main/res/values-pt-rPT/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">CameraV</string>
+  <string name="app_name">Lexally</string>
   <string name="photo">Fotografia</string>
   <string name="video">Vídeo</string>
   <string name="menu_all_media">Toda a Multimédia</string>
